--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Basic Information-->
-    <title></title>
-    <meta name="description" content="" />
+    <Lauren Krueger's Portfolio></title>
+    <meta name="Magazine Journalist" content="" />
     <link rel="canonical" href="" />
     <!--Open Graph-->
     <meta property="og:image" content="" />
