--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left"
         >
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Hi, I'm Your Name.
+            Hi, I'm Lauren.
           </h1>
           <p class="leading-normal text-2xl mb-8">
             Let me tell you a little about myself.
