--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               class="no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
               href="#"
             >
-              YOUR NAME
+              LAUREN KRUEGER
             </a>
           </div>
           <div class="flex-1"></div>
