--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         ></div>
       </div>
       <h3 class="my-4 text-3xl leading-tight">
-        Let's continue to conversation!
+        Let's continue the conversation!
       </h3>
       <button
         class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
