--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Basic Information-->
-    <Lauren Krueger's Portfolio></"Lauren Krueger's Portfolio" >
+    <title>Lauren Krueger</title>
     <meta name="Magazine Journalist" content="" />
     <link rel="canonical" href="" />
     <!--Open Graph-->
