--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Basic Information-->
     <title>Lauren Krueger</title>
-    <meta name="Magazine Journalist" content="" />
+    <meta name="description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <link rel="canonical" href="" />
     <!--Open Graph-->
     <meta property="og:image" content="" />
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="" />
     <meta property="og:image:type" content="" />
     <meta property="og:url" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <!--Twitter Card-->
     <meta name="twitter:image:alt" content="" />
     <meta name="twitter:card" content="" />
