--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="" />
     <meta property="og:type" content="" />
     <meta property="og:image:alt" content="" />
-    <meta property="og:phone_number" content="" />
+    <meta property="og:phone_number" content="763-370-4520" />
     <meta property="og:site_name" content="" />
     <meta property="og:title" content="" />
     <meta property="og:locale" content="" />
