--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <link rel="canonical" href="" />
     <!--Open Graph-->
-    <meta property="og:image" content="Lauren Krueger Headshot 1" />
+    <meta property="og:image" content="Lauren Krueger Headshot 1.jpg" />
     <meta property="og:type" content="" />
     <meta property="og:image:alt" content="" />
     <meta property="og:phone_number" content="763-370-4520" />
