--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <!--Basic Information-->
     <title>Lauren Krueger</title>
     <meta name="description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="https://laurenkrueger.github.io/isu-portfolio/" />
     <!--Open Graph-->
     <meta property="og:image" content="Lauren Krueger Headshot 1.jpg" />
-    <meta property="og:type" content="" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:alt" content="profile photo" />
     <meta property="og:phone_number" content="763-370-4520" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:locale" content="" />
-    <meta property="og:image:type" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="Lauren Krueger" />
+    <meta property="og:title" content="Lauren Krueger" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:url" content="https://laurenkrueger.github.io/isu-portfolio/" />
     <meta property="og:description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <!--Twitter Card-->
     <meta name="twitter:image:alt" content="" />
     <meta name="twitter:card" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:description" content="" />
-    <meta name="twitter:creator" content="" />
+    <meta name="twitter:title" content="Lauren Krueger" />
+    <meta name="twitter:site" content="@laurenkruegs" />
+    <meta name="twitter:description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
+    <meta name="twitter:creator" content="Lauren Krueger" />
     <meta name="twitter:image" content="" />
     <!--Icons-->
     <link
