--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <link rel="canonical" href="https://laurenkrueger.github.io/isu-portfolio/" />
     <!--Open Graph-->
-    <meta property="og:image" content="Lauren Krueger Headshot 1.jpg" />
+    <meta property="og:image" content="IMG_1510.JPG" />
     <meta property="og:type" content="website" />
     <meta property="og:image:alt" content="profile photo" />
     <meta property="og:phone_number" content="763-370-4520" />
@@ -21,13 +21,13 @@
     <meta property="og:url" content="https://laurenkrueger.github.io/isu-portfolio/" />
     <meta property="og:description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <!--Twitter Card-->
-    <meta name="twitter:image:alt" content="" />
+    <meta name="twitter:image:alt" content="IMG_1510.JPG" />
     <meta name="twitter:card" content="" />
     <meta name="twitter:title" content="Lauren Krueger" />
     <meta name="twitter:site" content="@laurenkruegs" />
     <meta name="twitter:description" content="Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can." />
     <meta name="twitter:creator" content="Lauren Krueger" />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:image" content="IMG_1510.JPG" />
     <!--Icons-->
     <link
       rel="stylesheet"
