--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a
                 class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4"
                 href="#"
-                >LinkedIn</a
+                >LinkedIn</a"www.linkedin.com/in/lauren-krueger-6b031b196" 
               >
             </li>
           </ul>
@@ -109,7 +109,7 @@
             Hi, I'm Lauren.
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            Let me tell you a little about myself.
+            Magazine journalist, communicator, and fellow creative. I love writing, achieving goals, and telling others' stories the best I can.
           </p>
           <button
             class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold  my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
@@ -312,7 +312,7 @@
         class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
       >
         Email me
-      </button>
+      </button> "laurenk5@iastate.edu" >
     </section>
     <footer class="bg-white">
       <div class="container mx-auto px-8">
