--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="w-full md:w-3/5 py-6 text-center">
           <img
             class="w-full md:w-3/5 py-6 text-center"
-            src="https://via.placeholder.com/600"
+            src="https://documentcloud.adobe.com/link/review?uri=urn:aaid:scds:US:09e86a51-514f-4bdb-99da-b64b28e1a2aa"
           />
         </div>
       </div>
