--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
       >
         Email me
-      </button> "laurenk5@iastate.edu" >
+      </button> >
     </section>
     <footer class="bg-white">
       <div class="container mx-auto px-8">
